examples/test/testpolicy9665.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9665
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key43: value43
      key26: value37
      key38: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value28
          key4: value0
      podSelector:
        matchLabels:
          key37: value37
